# ElteCar_DataServer

./: .clang-format  CMakeLists.txt  README.md
include/: argument_handler.h  argument_parser.h  cpp_file_handling.h  csv_reader.h
include/general/ArgumentParser/: argument_parser.h  argument_runner.h  base_runner.h  parser.h  runner.h
include/general/SharedMemory/: bufferd_writer.h  info.h  memory_info.h  threaded_multi_writer_handler.h
src/: argument_handler.cpp  argument_parser.cpp  cpp_file_handling.cpp  main.cpp
src/general/ArgumentParser/: argument_parser.cpp  base_runner.cpp  parser.cpp
src/general/SharedMemory/: bufferd_writer.cpp  threaded_multi_writer_handler.cpp
